--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,9 +1,9 @@
 <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
   <div class="container flex flex-wrap justify-between items-center mx-auto">
-    <a href="https://flowbite.com/" class="flex items-center">
-      <img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo">
-      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
-    </a>
+    <div class="flex items-center">
+      <img src="/img/man.jpg" class="mr-3 h-6 sm:h-9 rounded-full" />
+      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">My blog</span>
+    </div>
     <div class="flex md:order-2">
       <button type="button" data-collapse-toggle="navbar-search" aria-controls="navbar-search" aria-expanded="false" class="md:hidden text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 mr-1">
         <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -40,7 +40,11 @@
         {{ $currentPage := . }}
         {{ range .Site.Menus.main.ByWeight }}
           <li>
-            <a href="{{ .URL }}" class="block py-2 pr-4 pl-3 text-gray-700 rounded {{ if eq .URL $currentPage.Page.RelPermalink }}{{else}}hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700{{end}} md:p-0">{{ .Name }}</a>
+            {{ if eq .URL $currentPage.Page.RelPermalink }}
+              <span class="block py-2 pr-4 pl-3 text-gray-700 rounded md:p-0">{{ .Name }}</span>
+            {{else}}
+              <a href="{{ .URL }}" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">{{ .Name }}</a>
+            {{end}}
           </li>
         {{ end }}
       </ul>
